--- a/src/components/EventsBlock.module.css
+++ b/src/components/EventsBlock.module.css
@@ -1,8 +1,32 @@
 .container {
   display: flex;
+  flex-direction: column;
   width: 80%;
-  height: 100px;
+  height: auto;
   background-color: grey;
   margin: auto;
   border-radius: 14px;
+  overflow: hidden;
+}
+
+.invite {
+  text-align: center;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background: white;
+  min-height: 150px;
+}
+
+.players {
+  display: flex;
+  flex-direction: column;
+}
+
+.pending {
+  background-color: red;
+}
+
+.accepted {
+  background-color: green;
 }
