small home page UI changes

--- a/src/components/Leaderboard.module.css
+++ b/src/components/Leaderboard.module.css
@@ -2,6 +2,11 @@
   background-color: white;
   width: 90%;
   margin: auto;
+  color: black;
+}
+
+.title {
+  color: #cf5f56;
 }
 
 .leaderboardUser {
