--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,13 +1,32 @@
 .main {
-  max-width: 700px;
+  max-width: 750px;
   height: 100%;
-  background-color: green;
+  color: white;
   margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  padding: 50px;
+  padding-top: 50px;
+}
+
+.header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+
+.image {
+  height: 100px;
+}
+
+.signIn {
+  border: 2px solid blue;
+  padding: 10px 25px;
+  font-size: x-large;
+  color: white;
 }
 
 .box {
