--- a/src/components/Leaderboard.module.css
+++ b/src/components/Leaderboard.module.css
@@ -8,6 +8,15 @@
   color: #cf5f56;
 }
 
+.leaderboardHead {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  padding: 20px;
+  color: #9a66d9;
+  margin-bottom: 10px;
+  background-color: #29243e;
+}
+
 .leaderboardUser {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
