--- a/src/pages/UserPage.module.css
+++ b/src/pages/UserPage.module.css
@@ -1,12 +1,12 @@
 .main {
   max-width: 700px;
   height: 100%;
-  background-color: green;
   margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  color: white;
 }
 
 .blocks {
@@ -17,4 +17,10 @@
   position: absolute;
   top: 5%;
   left: 5%;
+
+  border: 2px solid blue;
+  padding: 10px 25px;
+  font-size: x-large;
+  color: white;
+  margin-right: 5%;
 }
