--- a/src/components/Leaderboard.module.css
+++ b/src/components/Leaderboard.module.css
@@ -21,8 +21,19 @@
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   padding: 20px;
+  max-height: 60px;
   background-color: white;
   margin-bottom: 10px;
+}
+
+.king {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  padding: 20px;
+  max-height: 60px;
+  background-color: white;
+  margin-bottom: 10px;
+  font-size: x-large;
 }
 
 .view {
