--- a/src/pages/UserPage.module.css
+++ b/src/pages/UserPage.module.css
@@ -17,10 +17,8 @@
   position: absolute;
   top: 5%;
   left: 5%;
-
   border: 2px solid blue;
   padding: 10px 25px;
   font-size: x-large;
-  color: white;
-  margin-right: 5%;
+  color: rgb(255, 255, 255);
 }
