--- a/src/pages/UserPage.module.css
+++ b/src/pages/UserPage.module.css
@@ -18,7 +18,7 @@
   top: 5%;
   left: 5%;
   border: 2px solid blue;
-  padding: 10px 25px;
-  font-size: x-large;
+  padding: calc(5rem / 10);
+  font-size: calc(5rem / 10);
   color: rgb(255, 255, 255);
 }
