--- a/src/components/EventsBlock.module.css
+++ b/src/components/EventsBlock.module.css
@@ -13,7 +13,7 @@
   text-align: center;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   background: #f18f54;
   min-height: 150px;
 }
