--- a/src/pages/UserSignupPage.module.css
+++ b/src/pages/UserSignupPage.module.css
@@ -1,7 +1,8 @@
 .container {
+  color: white;
   max-width: 700px;
   height: 100vh;
-  background-color: green;
+
   margin: auto;
   display: flex;
   flex-direction: column;
