added whiffwhaf calendar and response enum

--- a/src/pages/challengePage.module.css
+++ b/src/pages/challengePage.module.css
@@ -12,7 +12,7 @@
 .calendarContainer {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 5;
 }
 
